--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Honk&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
+body {
+    background-color: #3498e9;
+}
+
+.heading {
+    font-family: 'Honk', sans-serif;
+    text-align: center;
+    font-size: 100px;
+    margin: 0;
+}
