--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,21 +22,20 @@ body {
 .puzzle-board {
     width: 90%;
     max-width: 450px;
-    height: 90%;
-    max-height: 450px;
     aspect-ratio: 1;
-    background-color: #808080;
+    background-color: #ffffff;
     border: 10px solid #ffffff;
     margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-}
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1px;
 
 img {
-    max-width: 146px;
-    max-height: 146px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border: 1px solid #ffffff;
-    margin: auto; 
+    box-sizing: border-box;
 }
 
 .sound-new {
@@ -105,6 +104,6 @@ footer {
 
 @media only screen and (max-width: 768px) {
     .heading {
-        font-size: 50px; /* Adjust the font size for smaller screens */
+        font-size: 50px;
     }
 }
