--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1px;
+}
 
 img {
     width: 100%;
@@ -54,7 +55,6 @@ img {
     border: 3px solid #000;
     border-radius: 10px;
     padding: 10px;
-
 }
 
 .audio-button {
@@ -100,7 +100,6 @@ footer {
 .fa-brands:hover {
     color: #9999b8;
 }
-
 
 @media only screen and (max-width: 768px) {
     .heading {
