--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1px;
+    cursor: pointer;
 }
 
 img {
@@ -56,7 +57,6 @@ img {
 }
 
 .how-to-play {
-    
     color: #000000;
     cursor: pointer;
     margin-left: 40%;
