--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ img {
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
     margin-right: 40%;
-    border: 3px solid #000;
+    border: 3px solid #000000;
     border-radius: 10px;
     padding: 10px;
 }
@@ -60,9 +60,9 @@ img {
     color: #000000;
     cursor: pointer;
     margin-left: 40%;
-    border: 3px solid #000;
+    border: 3px solid #000000;
     border-radius: 10px;
-    padding: 10px;  
+    padding: 10px;
 }
 
 .how-to-play a {
@@ -112,7 +112,37 @@ footer {
 
 
 /*Modals*/
-.modal-rules
+.modal-rules {
+    display: none;
+    position: fixed;
+    margin: 0 auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 600px;
+    height background-color: #3498e9;
+    border: 10px solid #000000;
+    border-radius: 10px;
+}
+
+.modal-rules-body {
+    background: linear-gradient(to bottom, #e7eb09, #da3a8a);
+    padding: 10%;
+}
+
+.close-button {
+    color: #000000;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    border: 3px solid #000000;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #ffffff;
+}
+
+
 
 @media only screen and (max-width: 768px) {
     .heading {
@@ -125,8 +155,7 @@ footer {
 
     .new-game,
     .how-to-play {
-        margin: 10px; 
+        margin: 10px;
         width: calc(50% - 20px);
     }
 }
-
