Make tap-highlight transparent to remove flashing on mobile screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ body {
     grid-template-columns: repeat(3, 1fr);
     gap: 1px;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 img {
