--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
 .heading {
     font-family: 'Honk', sans-serif;
     text-align: center;
-    font-size: 100px;
+    font-size: 125px;
     margin: 0;
 }
 
@@ -18,7 +18,7 @@ body {
 
 .turns {
     display: inline-block;
-    width: 110px; 
+    width: 120px; 
     border: 5px solid;
     border-radius: 10%;
     padding: 10px;
@@ -69,6 +69,7 @@ img {
     border: 3px solid #000000;
     border-radius: 10px;
     padding: 10px;
+    max-width: 150px;
 }
 
 .how-to-play {
@@ -79,6 +80,7 @@ img {
     border: 3px solid #000000;
     border-radius: 10px;
     padding: 10px;
+    max-width: 150px;
 }
 
 .how-to-play a {
@@ -209,6 +211,8 @@ footer {
     color: #000000;
     font-weight: bold;
 }
+
+
 
 @media only screen and (max-width: 768px) {
     .heading {
