--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
 .heading {
     font-family: 'Honk', sans-serif;
     text-align: center;
-    font-size: 125px;
+    font-size: 100px;
     margin: 0;
     padding-top: 0;
 }
@@ -61,6 +61,7 @@ img {
     flex-direction: row;
     justify-content: space-evenly;
     padding-top: 10px;
+
 }
 
 .new-game {
@@ -96,20 +97,23 @@ img {
 }
 
 .audio-button {
-    width: 20%;
+    width: 25%;
     max-width: 50px;
-    border: none;
+    border: 3px solid #000000;
+    border-radius: 10px;
     display: block;
     margin: auto;
-    padding-top: 10px;
+    padding: 10px;
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
+    background-color: #ffffff;
 }
 
 
 footer {
     font-family: sans-serif;
     text-align: center;
+    font-size: 10px;
     color: #000000;
     padding-top: 1%;
     padding-bottom: 1%;
@@ -157,8 +161,13 @@ footer {
 .modal-rules-body {
     background: linear-gradient(to bottom, #e7eb09, #da3a8a);
     padding: 10%;
+    font-size: 15px;
     color: #000000;
     font-weight: bold;
+}
+
+.modal-rules-body p {
+    margin-bottom: 20px;
 }
 
 .close-button {
@@ -168,12 +177,14 @@ footer {
     border: 3px solid #000000;
     border-radius: 10px;
     padding: 10px;
+    margin-top: 10px;
     background-color: #ffffff;
 }
 
 .modal-sure {
     display: none;
     position: fixed;
+    font-size: 15px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -205,6 +216,7 @@ footer {
 
 .modal-win {
     position: fixed;
+    font-size: 15px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
