--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Honk&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
-
+/* Body style */
 body {
     background-color: #3498E9;
     background-position: center;
     -webkit-tap-highlight-color: transparent;
 }
-
+/* Heading style */
 .heading {
     font-family: 'Honk', sans-serif;
     text-align: center;
@@ -13,11 +13,11 @@ body {
     margin: 0;
     padding-top: 0;
 }
-
+/* Stats div */
 .stats {
     text-align: center;
 }
-
+/* Turns counter */
 .turns {
     display: inline-block;
     width: 140px;
@@ -28,13 +28,13 @@ body {
     margin: 0 auto 10px;
     background-color: #FFFFFF;
 }
-
+/* Number of turns */
 .turns span {
     display: inline-block;
     width: 40px;
     text-align: center;
 }
-
+/* Puzzle bpard layout */
 .puzzle-board {
     width: 95%;
     max-width: 450px;
@@ -47,7 +47,7 @@ body {
     cursor: pointer;
     
 }
-
+/* Image piece styling */
 img {
     width: 100%;
     height: 100%;
@@ -55,7 +55,7 @@ img {
     border: 1px solid #FFFFFF;
     box-sizing: border-box;
 }
-
+/* Buttons div */
 .how-new {
     display: flex;
     flex-direction: row;
@@ -63,7 +63,7 @@ img {
     padding-top: 10px;
     margin-bottom: 20px;
 }
-
+/* New Game button */
 .new-game {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -74,7 +74,7 @@ img {
     padding: 10px;
     max-width: 150px;
 }
-
+/* Rules button */
 .how-to-play {
     color: #000000;
     font-weight: bold;
@@ -91,11 +91,11 @@ img {
     text-decoration: none;
     color: #000000;
 }
-
+/* Hidden audio controller */
 .audio-controller {
     display: none;
 }
-
+/* Audio on/off buttons */
 .audio-button {
     width: 25%;
     max-width: 50px;
@@ -106,11 +106,9 @@ img {
     margin-bottom: 40px;
     padding: 10px;
     cursor: pointer;
-    
     background-color: #FFFFFF;
 }
-
-
+/* Footer styling */
 footer {
     font-family: sans-serif;
     text-align: center;
@@ -124,27 +122,23 @@ footer {
     width: 100%;
     background: linear-gradient(to bottom, #E7EB09, #DA3A8A);
 }
-
-/*Social media icons size & positioning on footer*/
+/* Social media icons size & positioning on footer */
 .social-icons {
     display: flex;
     justify-content: space-around;
     font-size: 200%;
 }
-
-/*Social media links icons color & hover transition time*/
+/* Social media links icons color & hover transition time */
 .fa-brands {
     color: #000000;
     transition: all 0.4s linear;
 }
 
-/*Social media links hover color change*/
+/* Social media links hover color change */
 .fa-brands:hover {
     color: #3498E9;
 }
-
-
-/*Modals*/
+/* Rules modal */
 .modal-rules {
     display: none;
     position: fixed;
@@ -170,7 +164,7 @@ footer {
 
 }
 
-
+/* Close button styling on Rules */
 .close-button {
     font-size: 20px;
     font-weight: bold;
@@ -181,7 +175,7 @@ footer {
     margin-top: 10px;
     background-color: #FFFFFF;
 }
-
+/* New game modal */
 .modal-sure {
     display: none;
     position: fixed;
@@ -194,7 +188,6 @@ footer {
     border-radius: 10px;
     width: 300px;
     max-width: 80%;
-
 }
 
 .modal-sure-body {
@@ -203,7 +196,7 @@ footer {
     color: #000000;
     font-weight: bold;
 }
-
+/* Confirmation buttons */
 .confirm-yes,
 .confirm-no {
     font-size: 20px;
@@ -214,7 +207,7 @@ footer {
     padding: 10px;
     background-color: #FFFFFF;
 }
-
+/* Solved puzzle message */
 .modal-win {
     position: fixed;
     font-size: 15px;
@@ -234,9 +227,7 @@ footer {
     color: #000000;
     font-weight: bold;
 }
-
-
-
+/* Media queries for smaller screens */
 @media only screen and (max-width: 768px) {
     .heading {
         font-size: 45px;
